--- a/Makefile.common.in
+++ b/Makefile.common.in
@@ -1,5 +1,5 @@
 # Set the name of the project here
-PROJECT_NAME := slicer
+PROJECT_NAME := dyn-aa
 PROJ_VERSION := 0.10
  
 # Set this variable to the top of the LLVM source tree.
