handle store instructions

--- a/test/Instrumented/Makefile
+++ b/test/Instrumented/Makefile
@@ -1,6 +1,6 @@
 # Author: Jingyue
 
-PROGS = SimpleTest TestCalloc
+PROGS = SimpleTest TestCalloc TestStore
 BCS = $(PROGS:=.bc)
 INSTRUMENTED_BCS = $(PROGS:=.inst.bc)
 INSTRUMENTED_LLS = $(PROGS:=.inst.ll)
@@ -11,7 +11,7 @@ CXXFLAGS = -g -Wall
 all: $(INSTRUMENTED_BCS) $(INSTRUMENTED_LLS)
 
 clean:
-	rm -rf $(INSTRUMENTED_BCS)
+	rm -rf $(INSTRUMENTED_BCS) $(INSTRUMENTED_LLS)
 
 %.inst.bc: ../Original/%.bc
 	opt -load $(LLVM_ROOT)/install/lib/MemoryInstrumenter.so \
