fixed HookMemAlloc's type

--- a/lib/MemoryInstrumenter/Makefile
+++ b/lib/MemoryInstrumenter/Makefile
@@ -5,4 +5,6 @@ LIBRARYNAME = MemoryInstrumenter
 LOADABLE_MODULE = 1
 BUILD_ARCHIVE = 1
 
+SOURCES = MemoryInstrumenter.cpp
+
 include $(LEVEL)/Makefile.common
