instrumentation framework done

--- a/lib/MemoryInstrumenter/Makefile
+++ b/lib/MemoryInstrumenter/Makefile
@@ -8,3 +8,11 @@ BUILD_ARCHIVE = 1
 SOURCES = MemoryInstrumenter.cpp
 
 include $(LEVEL)/Makefile.common
+
+all:: MemoryHooks.bc
+
+MemoryHooks.bc: MemoryHooks.cpp
+	clang++ $< -o $@ -c -emit-llvm
+
+clean::
+	rm -rf MemoryHooks.bc
