added a test case for multithreaded programs

--- a/test/Instrumented/Makefile
+++ b/test/Instrumented/Makefile
@@ -1,6 +1,6 @@
 # Author: Jingyue
 
-PROGS = SimpleTest TestCalloc TestStore TestInit
+PROGS = SimpleTest TestCalloc TestStore TestInit TestThread
 BCS = $(PROGS:=.bc)
 INSTRUMENTED_BCS = $(PROGS:=.inst.bc)
 INSTRUMENTED_LLS = $(PROGS:=.inst.ll)
@@ -8,6 +8,7 @@ INSTRUMENTED_EXES = $(PROGS:=.inst)
 
 CFLAGS = -g -Wall
 CXXFLAGS = -g -Wall
+LDFLAGS = -pthread
 
 all: $(INSTRUMENTED_BCS) $(INSTRUMENTED_LLS) $(INSTRUMENTED_EXES)
 
@@ -24,6 +25,6 @@ clean:
 	llvm-dis $<
 
 %.inst: %.inst.bc
-	clang++ $< ../../lib/MemoryInstrumenter/MemoryHooks.bc -o $@
+	clang++ $< ../../lib/MemoryInstrumenter/MemoryHooks.bc -o $@ $(LDFLAGS)
 
 .PHONY: clean
