--- a/Makefile.common.in
+++ b/Makefile.common.in
@@ -20,3 +20,8 @@ PROJ_INSTALL_ROOT := @prefix@
 
 # Include LLVM's Master Makefile.
 include $(LLVM_SRC_ROOT)/Makefile.common
+
+# Add additional include paths. 
+AdditionalIncludes = -I$(RCS_COMMON_ROOT)/include
+CFLAGS += $(AdditionalIncludes)
+CXXFLAGS += $(AdditionalIncludes)
