consider top-level variables as well

--- a/test/Instrumented/Makefile
+++ b/test/Instrumented/Makefile
@@ -1,6 +1,6 @@
 # Author: Jingyue
 
-PROGS = SimpleTest TestCalloc TestStore TestInit TestThread
+PROGS = SimpleTest TestCalloc TestStore TestInit TestThread TestTopLevel
 BCS = $(PROGS:=.bc)
 INSTRUMENTED_BCS = $(PROGS:=.inst.bc)
 INSTRUMENTED_LLS = $(PROGS:=.inst.ll)
