--- a/test/Original/Makefile
+++ b/test/Original/Makefile
@@ -1,22 +1,26 @@
 # Author: Jingyue
 
-PROGS = SimpleTest TestCalloc TestStore TestInit TestThread
+PROGS = SimpleTest TestCalloc TestStore TestInit TestThread TestTopLevel
 BCS = $(PROGS:=.bc)
+LLS = $(PROGS:=.ll)
 
 CFLAGS = -g -Wall
 CXXFLAGS = -g -Wall
 LDFLAGS = -pthread
 
-all: $(BCS) $(PROGS)
+all: $(BCS) $(LLS) $(PROGS)
 
 clean:
-	rm -f $(BCS)
+	rm -f $(BCS) $(LLS) $(PROGS)
 
 %.bc: %.c
 	clang $< -o $@ -c -emit-llvm $(CFLAGS)
 
 %.bc: %.cpp
 	clang++ $< -o $@ -c -emit-llvm $(CXXFLAGS)
+
+%.ll: %.bc
+	llvm-dis $<
 
 %: %.bc
 	clang++ $< -o $@ $(LDFLAGS)
