--- a/test/Makefile
+++ b/test/Makefile
@@ -7,7 +7,9 @@ install:
 build:
 	make -C Original
 	make -C Instrumented
+	make -C PointTo
 
 clean:
 	make -C Original clean
 	make -C Instrumented clean
+	make -C PointTo clean
