a tool to dump point-to logs

--- a/lib/MemoryInstrumenter/Makefile
+++ b/lib/MemoryInstrumenter/Makefile
@@ -14,7 +14,9 @@ all:: MemoryHooks.bc
 install:: all
 
 MemoryHooks.bc: MemoryHooks.cpp
-	clang++ $< -o $@ -c -emit-llvm -g -O3
+	clang++ $< -o $@ -c -emit-llvm -g -O3 -MMD -I$(LEVEL)/include
 
 clean::
 	rm -rf MemoryHooks.bc
+
+-include: MemoryHook.d
