added a test case on function pointers

--- a/test/Original/Makefile
+++ b/test/Original/Makefile
@@ -1,6 +1,7 @@
 # Author: Jingyue
 
 PROGS = SimpleTest TestCalloc TestStore TestInit TestThread TestTopLevel
+PROGS += TestFP
 BCS = $(PROGS:=.bc)
 LLS = $(PROGS:=.ll)
 
