--- a/Makefile.common.in
+++ b/Makefile.common.in
@@ -1,7 +1,7 @@
 # Set the name of the project here
 PROJECT_NAME := dyn-aa
 PROJ_VERSION := 0.10
- 
+
 # Set this variable to the top of the LLVM source tree.
 LLVM_SRC_ROOT = @LLVM_SRC@
 
@@ -18,10 +18,15 @@ PROJ_OBJ_ROOT := $(subst //,/,@abs_top_objdir@)
 # Set the root directory of this project's install prefix
 PROJ_INSTALL_ROOT := @prefix@
 
+# Use clang to build runtime bytecode libraries
+LLVMCC_OPTION = clang
+ENABLE_BUILT_CLANG = 1
+LLVMCC_EMITIR_FLAG = -emit-llvm
+
 # Include LLVM's Master Makefile.
 include $(LLVM_SRC_ROOT)/Makefile.common
 
-# Add additional include paths. 
+# Add additional include paths.
 AdditionalIncludes = -I$(RCS_COMMON_ROOT)/include
 CFLAGS += $(AdditionalIncludes)
 CXXFLAGS += $(AdditionalIncludes)
