--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,6 @@
 LEVEL = ..
 
 DIRS = MemoryInstrumenter DynamicPointerAnalysis CallGraphChecker
+DIRS += DynamicAliasAnalysis
 
 include $(LEVEL)/Makefile.common
