--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,6 +1,6 @@
 LEVEL = ..
 
 DIRS = MemoryInstrumenter DynamicPointerAnalysis CallGraphChecker
-DIRS += DynamicAliasAnalysis
+DIRS += DynamicAliasAnalysis AliasAnalysisChecker
 
 include $(LEVEL)/Makefile.common
