Enhancement and refactoring:
Put CallGraphChecker and AliasAnalysisChecker under the same folder. Put
DynamicAliasAnalysis and DynamicPointerAnalysis under the same folder.
Therefore, we can have fewer folders and libraries.

Use the visitor pattern for DynamicPointerAnalysis and
DynamicAliasAnalysis.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,6 +1,5 @@
 LEVEL = ..
 
-DIRS = MemoryInstrumenter DynamicPointerAnalysis CallGraphChecker
-DIRS += DynamicAliasAnalysis AliasAnalysisChecker
+DIRS = MemoryInstrumenter DynamicAnalyses Checkers
 
 include $(LEVEL)/Makefile.common
