--- a/Makefile.common.in
+++ b/Makefile.common.in
@@ -9,6 +9,12 @@ LLVM_SRC_ROOT = @LLVM_SRC@
 # (this is *not* the same as OBJ_ROOT as defined in LLVM's Makefile.config).
 LLVM_OBJ_ROOT = @LLVM_OBJ@
 
+# Set this variable to the top of the RCS common source tree.
+RCS_COMMON_SRC_ROOT = @RCS_COMMON_SRC@
+
+# Set this variable to the top level directory where RCS common was built.
+RCS_COMMON_OBJ_ROOT = @RCS_COMMON_OBJ@
+
 # Set the directory root of this project's source files
 PROJ_SRC_ROOT := $(subst //,/,@abs_top_srcdir@)
 
@@ -27,6 +33,6 @@ LLVMCC_EMITIR_FLAG = -emit-llvm
 include $(LLVM_SRC_ROOT)/Makefile.common
 
 # Add additional include paths.
-AdditionalIncludes = -I$(RCS_COMMON_ROOT)/include
+AdditionalIncludes = -I$(RCS_COMMON_SRC_ROOT)/include
 CFLAGS += $(AdditionalIncludes)
 CXXFLAGS += $(AdditionalIncludes)
