--- a/autoconf/configure.ac
+++ b/autoconf/configure.ac
@@ -3,17 +3,17 @@ dnl * Initialize
 dnl **************************************************************************
 AC_INIT([[[dyn-aa]]],[[[0.10]]],[jingyue@cs.columbia.edu])
 
-dnl Identify where LLVM source tree is
-LLVM_SRC_ROOT="/home/jingyue/Research/llvm/llvm-2.9"
-LLVM_OBJ_ROOT="/home/jingyue/Research/llvm/llvm-2.9"
-
-dnl Find absolute paths to LLVM source and object trees
-LLVM_ABS_SRC_ROOT="`cd $srcdir ; cd $LLVM_SRC_ROOT ; pwd`"
-LLVM_ABS_OBJ_ROOT="`cd $LLVM_OBJ_ROOT ; pwd`"
-
 dnl Tell autoconf that this is an LLVM project being configured
 dnl This provides the --with-llvmsrc and --with-llvmobj options
-LLVM_CONFIG_PROJECT($LLVM_ABS_SRC_ROOT,$LLVM_ABS_OBJ_ROOT)
+LLVM_SRC_ROOT="."
+LLVM_OBJ_ROOT="."
+LLVM_CONFIG_PROJECT($LLVM_SRC_ROOT,$LLVM_OBJ_ROOT)
+
+dnl Tell autoconf that this project uses the RCS common project
+dnl This provides the --with-rcscommonsrc and --with-rcscommonobj options
+RCS_COMMON_SRC_ROOT="."
+RCS_COMMON_OBJ_ROOT="."
+RCS_COMMON_CONFIG_PROJECT($RCS_COMMON_SRC_ROOT,$RCS_COMMON_OBJ_ROOT)
 
 dnl Tell autoconf that the auxilliary files are actually located in
 dnl the LLVM autoconf directory, not here.
