Bug fix: the order in lib/Makefile is changed
Build Utils first

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,5 @@
 LEVEL = ..
 
-DIRS = Analyses Checkers Instrumenters Utils
+DIRS = Utils Analyses Checkers Instrumenters
 
 include $(LEVEL)/Makefile.common
