added a script to count the lines of code

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,11 @@
 *Debug/
 autoconf/aclocal.m4
 autoconf/autom4te.cache
-eval/
+eval/*bc
+eval/*pts
+eval/*log
+eval/*ac
+eval/*inst
 Makefile.common
 *.swp
 config.log
