refactor: make Utils .a and .so
Python scripts (e.g, dynaa_check_aa.py) need it to be an .so because
otherwise -log-file would be defined more than once. At the same time,
tool dynaa_dump_log wants to link it as a .a. Therefore, we build both
.so and .a for Utils.

--- a/lib/Utils/Makefile
+++ b/lib/Utils/Makefile
@@ -2,6 +2,7 @@ LEVEL = ../..
 
 LIBRARYNAME = DynAAUtils
 
-BUILD_ARCHIVE = 1
+SHARED_LIBRARY = 1
+ARCHIVE_LIBRARY = 1
 
 include $(LEVEL)/Makefile.common
