--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,5 @@
 LEVEL = ..
 
-DIRS = Utils Analyses Checkers Instrumenters
+DIRS = Utils Analyses Checkers Instrumenters Transforms
 
 include $(LEVEL)/Makefile.common
