Generate static libraries
also added a sample dynaa_opt
usage: dynaa_opt [-load xxx] < a.bc > b.bc

--- a/lib/Checkers/Makefile
+++ b/lib/Checkers/Makefile
@@ -2,6 +2,7 @@ LEVEL = ../..
 
 LIBRARYNAME = DynAACheckers
 
-LOADABLE_MODULE = 1
+SHARED_LIBRARY = 1
+ARCHIVE_LIBRARY = 1
 
 include $(LEVEL)/Makefile.common
