--- a/Makefile.common.in
+++ b/Makefile.common.in
@@ -32,7 +32,8 @@ LLVMCC_EMITIR_FLAG = -emit-llvm
 # Include LLVM's Master Makefile.
 include $(LLVM_SRC_ROOT)/Makefile.common
 
-# Add additional include paths.
-AdditionalIncludes = -I$(RCS_SRC_ROOT)/include
-CFLAGS += $(AdditionalIncludes)
-CXXFLAGS += $(AdditionalIncludes) -std=c++0x
+# Add additional include paths and library paths.
+AdditionalIncludePath = $(RCS_SRC_ROOT)/include
+AdditionalLibPath = $(RCS_OBJ_ROOT)/$(BuildMode)/lib
+CXXFLAGS += -I$(AdditionalIncludePath) -std=c++0x
+LDFLAGS += -L$(AdditionalLibPath)
