--- a/lib/Analyses/Makefile
+++ b/lib/Analyses/Makefile
@@ -2,6 +2,7 @@ LEVEL = ../..
 
 LIBRARYNAME = DynAAAnalyses
 
-LOADABLE_MODULE = 1
+SHARED_LIBRARY = 1
+ARCHIVE_LIBRARY = 1
 
 include $(LEVEL)/Makefile.common
