--- a/lib/Instrumenters/Makefile
+++ b/lib/Instrumenters/Makefile
@@ -2,6 +2,7 @@ LEVEL = ../..
 
 LIBRARYNAME = DynAAInstrumenters
 
-LOADABLE_MODULE = 1
+SHARED_LIBRARY = 1
+ARCHIVE_LIBRARY = 1
 
 include $(LEVEL)/Makefile.common
