--- a/configure.ac
+++ b/configure.ac
@@ -1,19 +1,13 @@
 dnl **************************************************************************
 dnl * Initialize
 dnl **************************************************************************
-AC_INIT([[[dyn-aa]]],[[[0.10]]],[])
+AC_INIT([[[neongoby]]],[[[0.10]]],[])
 
 dnl Tell autoconf that this is an LLVM project being configured
 dnl This provides the --with-llvmsrc and --with-llvmobj options
 LLVM_SRC_ROOT=`llvm-config --src-root`
 LLVM_OBJ_ROOT=`llvm-config --obj-root`
 LLVM_CONFIG_PROJECT($LLVM_SRC_ROOT,$LLVM_OBJ_ROOT)
-
-dnl Tell autoconf that this project uses the RCS common project
-dnl This provides the --with-rcssrc and --with-rcsobj options
-RCS_SRC_ROOT="."
-RCS_OBJ_ROOT="."
-RCS_CONFIG_PROJECT($RCS_SRC_ROOT,$RCS_OBJ_ROOT)
 
 dnl Tell autoconf that the auxilliary files are actually located in
 dnl the LLVM autoconf directory, not here.
@@ -28,6 +22,8 @@ AC_CONFIG_FILES(Makefile.common)
 dnl Configure project makefiles
 dnl List every Makefile that exists within your source tree
 AC_CONFIG_MAKEFILE(Makefile)
+
+AC_CONFIG_SUBDIRS(submodules/rcs)
 
 dnl **************************************************************************
 dnl * Determine which system we are building on
