--- a/submodules/Makefile
+++ b/submodules/Makefile
@@ -1,6 +1,6 @@
 # Indicates our relative path to the top of the project's root directory.
-LEVEL = .
-DIRS = submodules lib runtime tools
+LEVEL = ..
+DIRS = rcs
 
 # Include the Master Makefile that knows how to build all.
 include $(LEVEL)/Makefile.common
