--- a/tools/opt/Makefile
+++ b/tools/opt/Makefile
@@ -1,6 +1,6 @@
 LEVEL = ../..
 
-TOOLNAME = dynaa_opt
+TOOLNAME = ng_opt
 
 LINK_COMPONENTS = bitreader bitwriter asmparser instrumentation scalaropts ipo vectorize
 
@@ -12,6 +12,6 @@ include $(LEVEL)/Makefile.common
 # Put basic libraries at the back.
 # Append to ProjLibsOptions to make sure RCS libraries are between NeonGoby
 # libraries and LLVM libraries
-# FIXME: If RCS libraries changed, dynaa_opt will not be recompiled due to lack
+# FIXME: If RCS libraries changed, ng_opt will not be recompiled due to lack
 # of dependencies.
 ProjLibsOptions += -lRCSPointerAnalysis -lRCSCFG -lRCSID
